--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,21 @@
   background-color: var(--main-color);
 }
 
+.loader {
+	border: 10px solid #f3f3f3;
+	border-top: 10px solid #C271FF;
+	border-radius: 50%;
+	width: 80px;
+	height: 80px;
+	animation: spin 2s linear infinite;
+	margin: auto;
+}
+
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
+
 .quotes .carousel-item img {
   width: 160px;
   border-radius: 75px;
