made my computer crash :/

--- a/styles.css
+++ b/styles.css
@@ -311,18 +311,7 @@
   padding-bottom: 75px;
   color: var(--background-color);
 }
-/**
-#tutorial-carousel {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-}
 
-#tutorial-carousel .card {
-	width: 16rem;
-	flex: 0 1 calc(25% - 1em);
-}
-*/
 .section .card {
   border: 0;
   width: 16rem;
@@ -898,6 +887,17 @@
 .results .container {
   margin-top: 47px;
   margin-bottom: 37px;
+}
+
+#video-results {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+
+#video-results .card {
+	width: 16rem;
+	flex: 0 1 calc(25% - 1em);
 }
 
 .row [class*="col-"] {
